--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "babel": "^5.8.23",
     "babel-eslint": "^4.1.6",
     "eslint": "1.10.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nskazki/simple-pmysql.git"
+  },
+  "bugs": {
+    "url": "https://github.com/nskazki/simple-pmysql/issues"
+  },
+  "homepage": "https://github.com/nskazki/simple-pmysql#readme"
 }
