--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "dependencies": {
     "bluebird": "^3.1.1",
     "debug": "^2.2.0",
-    "event-to-promise": "^0.6.0",
     "lodash": "^3.10.1",
     "mysql": "^2.10.0",
-    "simple-debugger": "^1.0.3"
+    "simple-debugger": "^1.0.3",
+    "simple-e2p": "^1.0.1"
   },
   "devDependencies": {
     "babel": "^5.8.23",
