--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "simple-e2p": "^1.0.1"
   },
   "devDependencies": {
-    "babel": "^5.8.23",
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "eslint-plugin-json": "^2.1.2"
