--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "simple-pmysql",
   "version": "2.0.3",
   "description": "simple promisify wrapper for node-mysql",
-  "main": "src-build/index.js",
+  "main": "build/index.js",
   "scripts": {
     "prepublish": "npm run build",
-    "build": "babel src --retain-lines --out-dir src-build",
+    "build": "babel src --out-dir build",
     "eslint": "eslint --ext .json,.js .",
     "test": "npm run eslint"
   },
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
+    "@babel/preset-env": "^7.11.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.6.0",
     "eslint-plugin-json": "^2.1.2"
