--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.11.1",
     "@babel/preset-env": "^7.11.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-add-module-exports": "^1.0.2",
     "eslint": "^7.6.0",
     "eslint-plugin-json": "^2.1.2"
   },
